syntax = "proto3";

package geo;

option go_package = "matching-service/protoGeo;protoGeo";

message UpdateLocationRequest {
  string driverId = 1;
  string latitude = 2;
  string longitude = 3;
}

message UpdateLocationResponse {
  string message = 1;
}

message GetLocationRequest {
  string driverId = 1;
}

message GetLocationResponse {
  string latitude = 1;
  string longitude = 2;
}

// Add these new messages:
message FindDriversRequest {
  double latitude = 1;
  double longitude = 2;
  double radius = 3;
  uint32 limit = 4;
}

message Driver {
  string driverId = 1;
  double latitude = 2;
  double longitude = 3;
  uint64 geohash = 4;
}

message FindDriversResponse {
  repeated Driver drivers = 1;
}

service GeoService {
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse);
  rpc GetLocation(GetLocationRequest) returns (GetLocationResponse);
  rpc FindDrivers(FindDriversRequest) returns (FindDriversResponse);
}
